--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,17 @@
 version: "2.1"
 services:
   flaresolverr:
-    # DockerHub mirror flaresolverr/flaresolverr:latest
-    image: ghcr.io/flaresolverr/flaresolverr:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: flaresolverr
     environment:
       - LOG_LEVEL=${LOG_LEVEL:-info}
       - LOG_HTML=${LOG_HTML:-false}
       - CAPTCHA_SOLVER=${CAPTCHA_SOLVER:-none}
       - TZ=Europe/London
+      - FLARESOLVERR_API_KEY=${FLARESOLVERR_API_KEY}
+
     ports:
       - "${PORT:-8191}:8191"
     restart: unless-stopped
